fix: GuardarianDepositProviderModal footer alignment

--- a/src/components/Modals/GuardarianDepositProviderModal/GuardarianDepositProviderModal.module.scss
+++ b/src/components/Modals/GuardarianDepositProviderModal/GuardarianDepositProviderModal.module.scss
@@ -173,6 +173,7 @@
 
     .poweredBy {
         display: flex;
+        align-items: center;
         justify-content: center;
         gap: .625rem;
         margin-top: 7.5rem;
